--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.1.0",
     "@emotion/react": "^11.13.3",
     "axios": "^1.7.7",
+    "flowbite-react": "^0.10.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
